# Buscafolios-2

./: .gitignore  BuscaFolios.spec  README.md  build.bat  pyproject.toml
installer/: BuscaFolios.iss
resultados_busca_folios/2026-06-22_09-05-31_lote_001/: encontrados.csv
src/busca_folios/: __init__.py  app.py  duckdb_engine.py  main_window.py  models.py  worker.py
src/busca_folios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_engine_sql.py
